@@ -636,7 +636,8 @@ class CreateSeeds < ServiceObject
       {klass: ClinicLocation, column: "location_opened"},
       {klass: Division, column: "name"},
       {klass: Evidence, column: "level"},
-      {klass: Evidence, column: "summary"},
+      {klass: Evidence, column: "quality_of_evidence"},
+      {klass: Evidence, column: "definition"},
       {klass: FaqCategory, column: "name"},
       {klass: FaqCategory, column: "description"},
       {klass: Faq, column: "question"},
