@@ -3,7 +3,8 @@
 
   .form-inputs
     = f.input :level
-    = f.input :summary
+    = f.input :quality_of_evidence
+    = f.input :definition
 
   .form-actions
     = f.button :submit, :class => "btn btn-primary"
