@@ -8,20 +8,22 @@
   %table.table.table-condensed.table-striped
     %tr
       %th Level
-      %th Summary
+      %th Quality of Evidence
+      %th Definition
       %th # Items
       %th.admin
 
     - @evidences.each do |evidence|
       %tr
-        %td= link_to evidence.level, evidence
-        %td= evidence.summary
-        %td= link_to evidence.sc_items.count, evidence
-        %td.admin.btn-group
+        %td{:style => "width:5%;"}= link_to evidence.level, evidence
+        %td{:style => "width:13%;"}= evidence.quality_of_evidence
+        %td{:style => "width:45%;"}= evidence.definition_as_html
+        %td{:style => "width:10%;"}= link_to evidence.sc_items.count, evidence
+        %td.admin.btn-group{:style => "width:20%;"}
           - if can? :update, evidence
             = link_to("<i class='icon-pencil'></i>".html_safe + " Edit", edit_evidence_path(evidence.id), :class => "btn btn-mini ajax")
           - if can? :destroy, evidence
-            = link_to("<i class='icon-trash'></i>".html_safe + " Delete", evidence, :confirm => "Please do not delete levels of evidence without consulting IT or a Medical Lead.  Are you sure you want to delete Level of Evidence: #{evidence.level} #{evidence.summary}?", :method => :delete, :class => "btn btn-mini")
+            = link_to("<i class='icon-trash'></i>".html_safe + " Delete", evidence, :confirm => "Please do not delete levels of evidence without consulting IT or a Medical Lead.  Are you sure you want to delete Level of Evidence: #{evidence.level} #{evidence.definition}?", :method => :delete, :class => "btn btn-mini")
 
   %br
   - if can? :create, Evidence
