@@ -3,42 +3,57 @@
 .content-wrapper
   .content
     %h2
-      = @evidence.level
       %small
-        (Level of Evidence)
+        Level of Evidence
+      = @evidence.level
 
+    %p.no_indent.space
+      %strong Quality of Evidence:
+    %p
+      = @evidence.quality_of_evidence
 
     %p.no_indent.space
       %strong Level:
+    %p
       = @evidence.level
 
     %p.no_indent.space
-      %strong Summary:
-      - if @evidence.summary.blank?
+      %strong Definition:
+      - if @evidence.definition.blank?
         = " - "
-      = @evidence.summary
+    %p= @evidence.definition_as_html
 
     %br
 
+
+  .pad10
+
   - if @evidence.sc_items.present?
 
-    %table.table.table-condensed.table-striped
-      %tr
-        %th Content with this Level of Evidence
-        %th Category
-        %th Parent Category
-
-      - @evidence.sc_items.each do |sc_item|
+    %table.table.table-condensed.table-striped.tablesorter
+      %thead
         %tr
-          %td= link_to sc_item.name, sc_item_path(sc_item.id)
-          %td= sc_item.sc_category.name
-          %td= link_to sc_item.root_category.name, sc_item.root_category
+          %th{:class => "{sorter: 'text'}"} Content with this Level of Evidence
+          %th{:class => "{sorter: 'text'}"} Category
+          %th{:class => "{sorter: 'text'}"} Parent Category
+      %tbody
+        - @evidence.sc_items.each do |sc_item|
+          %tr
+            %td= link_to sc_item.name, sc_item_path(sc_item.id)
+            %td= sc_item.sc_category.name
+            %td= link_to sc_item.root_category.name, sc_item.root_category
 
-
-  %p.no_indent.space
-    = link_to "Back to all Levels of Evidence", evidences_path
   %p.admin.btn-group
     - if can? :update, @evidence
       = link_to("<i class='icon-pencil'></i>".html_safe + " Edit Level of Evidence #{@evidence.level}", edit_evidence_path(@evidence), :class => "btn ajax")
     - if can? :view_history, @evidence
       = large_history_button(@evidence)
+  %p.no_indent.space
+    = link_to "<< Back to all Levels of Evidence", evidences_path
+
+  %script{"type" => "text/javascript"}
+    :plain
+      $(document).ready(function() {
+        $('.tablesorter').tablesorter({sortList: [[0,0]]});
+      });
+
