@@ -34,14 +34,15 @@
           %i.icon-blue.icon-star
         = link_to(@sc_item.title, @sc_item.resolved_url, :target => "_blank", "onclick" => "window.pathways.trackContentItem(_gaq, #{@sc_item.id})")
       %li
-        - if show_evidence?(@sc_item.evidence)
-          %strong= render partial: "evidences/level", locals: {evidence: @sc_item.evidence}
         %a{"href" => "javascript:void(0)", "onclick" => "favorite('content_items',#{@sc_item.id},'#{escape_javascript(@sc_item.title)}')", "title" => "Favourite / un-favourite"}
           %i.icon-text.icon-heart{"id" => "user_favorite_content_items_#{@sc_item.id}"}
         - if @sc_item.can_email?
           = link_to "<i class='icon-envelope-alt icon-blue'></i>".html_safe, compose_mail_to_patients_path(@sc_item), :class => 'ajax', :title => "E-mail to patient"
         - if can? :view_history, @sc_item
           = history_icon(@sc_item)
+      %li
+        - if show_evidence?(@sc_item.evidence)
+          = render partial: "evidences/level", locals: {evidence: @sc_item.evidence}
 
   - elsif @sc_item.markdown?
 
@@ -55,7 +56,7 @@
       %h2
         Level of Evidence:
         %strong
-          %span= @sc_item.evidence.level
+          %span= "LOE=#{ evidence.level}"
 
     %p= BlueCloth.new(@sc_item.markdown_content).to_html.html_safe
 
